<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DNA Shot</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear">Clear Results</string>

    <color name="app_blue">#1ED4C8</color>
    <color name="app_black">#000000</color>
    <color name="app_bg_blue">#347FB9</color>
    <color name="app_bright_blue">#1ED4C0</color>
    <color name="app_dark_blue">#18ABA1</color>
    <color name="app_light_blue">#64DED6</color>
    <color name="app_light_gray">#EEEEEE</color>
    <color name="app_gray">#888888</color>
    <color name="app_white">#FFFFFF</color>
    <color name="app_red">#ED4040</color>
    <color name="app_soft_black">#333333</color>
    <color name="app_soft_red">#DBA9A9</color>
    <color name="app_soft_blue">#B4DEDB</color>

    <string name="action_search">Search</string>
    <string name="action_delete_result">Delete Result</string>
    <string name="cancel">Cancel</string>
    <string name="clear_results_title">Clear all results?</string>
    <string name="confirm">Confirm</string>
    <string name="delete_result_title">Delete Result</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="menu_take_picture">CAMERA</string>
    <string name="menu_upload_picture">UPLOAD</string>
    <string name="menu_results">RESULTS</string>
    <string name="menu_settings">SETTINGS</string>
    <string name="menu_info">INFORMATION</string>
    <string name="menu_content_title">Welcome!</string>
	<string name="menu_pictures_title">Send a picture</string>
	<string name="menu_results_title">Last results</string>
	<string name="menu_results_more">MORE RESULTS</string>
    <string name="test">Test!</string>
    <string name="clear_result">Clear Results</string>
    <string name="help_menu_img">Menu Image</string>
    <string name="help_result_img">Result Image</string>
    <string name="help_navigation_img">Navigation Image</string>
    <string name="capture">CAPTURE</string>
    <string name="title_activity_take_picture">Capture Picture</string>
    <string name="title_activity_upload_picture">Upload Picture</string>
    <string name="title_activity_results">Results</string>
    <string name="title_activity_info">Info</string>
    <string name="title_activity_settings">Settings</string>
    <string name="result_title">Result:</string>
    <string name="result_loading">Loading</string>
    <string name="result_waiting">Waiting response</string>
    <string name="result_done">Done</string>
    <string name="result_error">Error</string>
    <string name="result_id">Id: </string>
    <string name="result_result">Search Result: </string>
    <string name="result_original">Camera Image: </string>
    <string name="result_preProcessed">Pre-processed Image: </string>
    <string name="result_ocr">OCR: </string>
    <string name="result_no_result">You did not make any search.</string>
    <string name="result_not_sent">Not Sent</string>
    <string name="settings_image_compression">Image Compression</string>
    <string name="settings_really_low_comp">Warning! Very Low Compression</string>
    <string name="settings_low_comp">Low Compression</string>
    <string name="settings_normal_comp">Normal Compression</string>
    <string name="settings_high_comp">High Compression</string>
    <string name="settings_really_high_comp">Warning! Very High Compression</string>
    <string name="title_activity_result">Result</string>
    <string name="notify_done_A">Your Result of ID: </string>
    <string name="notify_done_B">Already Done</string>
    <string name="settings_notifications">Send notifications when a result is done</string>   
    <string name="title_tab_result">Result</string>
    <string name="title_tab_debug">Debug</string>
    
    <string name="UNPROCESSED">Processing not initialized</string>
    <string name="PREPROCESSING_STARTED">Pre-processing in progress</string>
    <string name="PREPROCESSING_FINISHED">Pre-processing finished</string>    
    <string name="OCR_STARTED">OCR in progress</string>
    <string name="OCR_FINISHED">OCR finished</string>
    <string name="BLAST_STARTED">BLAST search in progress</string>
    <string name="BLAST_FINISHED">BLAST search finished</string>
    <string name="DONE">Done</string>
    <string name="ERROR">A processing error occurred</string>
    <string name="ERROR_OCR">An OCR error has occurred</string>    
    <string name="ERROR_BLAST">BLAST database is not responding</string>    
    
    <string name="warning_not_sent">The selected item not initialized yet</string>
    <string name="warning_waiting">The selected item is being processed</string>
    <string name="warning_ocr_error">It was not possible to identify a valid DNA sequence from the image</string>

    <string name="info_about_title">What is DNA Shot?</string>
    <string name="info_about">DNA Shot is an app developed by students of the Federal University of Paraná, with the goal of recognizing DNA sequences from pictures</string>
    <string name="info_how_title">How do I use it?</string>
    <string name="info_how">You can send a picture either from your camera or your gallery, and the app will do the work. An internet connection is required to finish the search. If you checked the send notification option on the settings page, a notification will be sent once the result is ready.</string>
	<string name="info_icons_title">What do the icons mean?</string>
	<string name="info_icon_eye_on">OCR Finished</string>
	<string name="info_icon_eye_off">OCR in Process</string>
	<string name="info_icon_eye_error">OCR Error</string>
	<string name="info_icon_dna_on">BLAST Finished</string>
	<string name="info_icon_dna_off">BLAST Search in Progress</string>
	<string name="info_icon_dna_error">BLAST Error</string>
	<string name="info_delete_title">How can I delete a result?</string>
	<string name="info_delete">You can delete a result by clicking on it and keep pressing. This will trigger a delete dialog. You can also delete a result while viewing it through the menu. In the main screen, you can also delete all result. Notice all these actions can\'t be undone.</string>
    
    <string-array name="array_language">
        <item> English</item>        
    </string-array>

</resources>
