<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dnashot.activities.InfoActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_light_gray"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/info_about_title"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/info_about" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_soft_blue"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/info_how_title"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_soft_blue"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/info_how" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/info_icons_title"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="3dp" >

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:padding="3dp"
                        android:src="@drawable/eye_on" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:gravity="center_vertical"
                        android:padding="3dp"
                        android:text="@string/info_icon_eye_on" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="3dp" >

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:padding="3dp"
                        android:src="@drawable/eye_off" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:gravity="center_vertical"
                        android:padding="3dp"
                        android:text="@string/info_icon_eye_off" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="3dp" >

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:padding="3dp"
                        android:src="@drawable/eye_error" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:gravity="center_vertical"
                        android:padding="3dp"
                        android:text="@string/info_icon_eye_error" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="3dp" >

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:padding="3dp"
                        android:src="@drawable/dna_on" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:gravity="center_vertical"
                        android:padding="3dp"
                        android:text="@string/info_icon_dna_on" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="3dp" >

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:padding="3dp"
                        android:src="@drawable/dna_off" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:gravity="center_vertical"
                        android:padding="3dp"
                        android:textSize="13sp"
                        android:text="@string/info_icon_dna_off" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="3dp" >

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:padding="3dp"
                        android:src="@drawable/dna_error" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:gravity="center_vertical"
                        android:padding="3dp"
                        android:text="@string/info_icon_dna_error" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_soft_blue"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/info_delete_title"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_soft_blue"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/info_delete" />
        
    </LinearLayout>
    
    

</ScrollView>