<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout       
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/app_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/result_original" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/app_gray" />

        <ImageView
            android:id="@+id/imageOriginal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />
        

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/app_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/result_preProcessed" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/app_gray" />

        <ImageView
            android:id="@+id/imagePreProcessed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/app_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/result_ocr" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/app_gray" />

        <TextView
            android:id="@+id/ocrOutput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp" />
    </LinearLayout>

</ScrollView>